apps/dev/token-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-app
  namespace: token-app
spec:
  selector:
    app: token-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
